<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="195dp"
        android:alpha="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        app:srcCompat="@mipmap/sball_foreground" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Team A"
            android:textColor="@color/teams"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goal"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ascore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/scoreColor"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/foul"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/foula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp" />

        <Button
            android:id="@+id/abtn"
            android:layout_width="139dp"
            android:layout_height="67dp"
            android:layout_marginTop="35dp"
            android:background="@mipmap/ball"
            android:shadowColor="@android:color/holo_red_dark"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="3"
            android:text="@string/btnA"
            android:textAllCaps="false"
            android:textColor="@color/teams"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fabtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_delete"
            android:text="@string/foulTeamA"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingRight="10dp"
            android:text="Team B"
            android:textColor="@color/teams"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goal"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/bscore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/scoreColor"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/foul"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/foulb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp" />

        <Button
            android:id="@+id/bbtn"
            android:layout_width="146dp"
            android:layout_height="67dp"
            android:layout_marginTop="35dp"
            android:background="@mipmap/ball"
            android:shadowColor="@android:color/holo_red_dark"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="3"
            android:text="@string/btnB"
            android:textAllCaps="false"
            android:textColor="@color/teams"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fbbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_delete"
            android:text="@string/foulTeamB"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/rst"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:text="@string/rstbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>
